--- a/style.css
+++ b/style.css
@@ -975,26 +975,26 @@ body#index .site-logo {
   text-decoration: none;
   color: white;
 }
-/* Sabit arka plan */
+/* Sabit arka plan - her zaman en üstte ve orantılı */
 .fixed-bg {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
   width: 100vw;
   height: 100vh;
-  z-index: -1;
+  z-index: -100;
   background: url('assets/images/background.jpeg') center center / cover no-repeat;
-  /* Dilerseniz opaklık veya renk filtresi ekleyebilirsiniz */
-  /* opacity: 0.9; */
+  pointer-events: none;
 }
 
 @media (max-width: 768px) {
   .fixed-bg {
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
-    min-height: 100%;
-    min-width: 100%;
-    background-attachment: scroll;
+    min-width: 100vw;
+    min-height: 100vh;
+    background: url('assets/images/background.jpeg') center center / cover no-repeat;
+    z-index: -100;
   }
 }
 
